// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly can edit 1`] = `
<div
  className="details__list-edit"
>
  <div
    className="details__list-edit-button"
    content="CRUD.details.cancel"
    intent="info"
    position="top"
    usePortal={true}
  >
    <button
      disabled={false}
      icon="small-cross"
      minimal={true}
      onClick={[Function]}
    />
  </div>
  <form
    ErrorList={[Function]}
    className="CRUD-edit"
    disabled={false}
    fields={
      Object {
        "GeometryField": [Function],
        "RTEField": [Function],
        "TableField": [Function],
      }
    }
    onSubmit={[Function]}
    schema={
      Object {
        "properties": Object {
          "somePropertieName": Object {
            "default": undefined,
            "somePropertieName": Object {
              "foo": "foo",
            },
          },
        },
        "required": Array [],
        "type": "object",
      }
    }
    uiSchema={
      Object {
        "somePropertieName": Object {},
      }
    }
    widgets={
      Object {
        "FileWidget": [Function],
      }
    }
  >
    <button
      className="CRUD-edit__submit"
      loading={false}
      type="submit"
    >
      CRUD.details.save
    </button>
  </form>
</div>
`;

exports[`should render correctly can't edit 1`] = `
<div
  className="details__list-edit"
>
  <div
    className="details__list-edit-button"
    content="CRUD.details.update"
    intent="info"
    position="top"
    usePortal={true}
  >
    <button
      disabled={true}
      icon="edit"
      minimal={true}
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`should render correctly can't edit explicitly 1`] = `
<div
  className="details__list-edit"
>
  <div
    className="details__list-edit-button"
    content="CRUD.details.notAllowedToEdit"
    intent="warning"
    position="top"
    usePortal={true}
  >
    <button
      disabled={true}
      icon="info-sign"
      minimal={true}
      onClick={[Function]}
    />
  </div>
</div>
`;
